FLUID-580 : Added stub APIs for KYC, KYB, PaymentMethodConf and TenantType
Stub APIs done:

1. KYC
2. KYB
3. PaymentMethodConfigured
4. TenantType

JIRA ID: FLUID-580
